--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,9 @@ jobs:
         with:
           pull: false
           push: true
-          tags: 
-            - ghcr.io/bmoers/sn/atf-headless-runner:latest 
-            - ghcr.io/bmoers/sn/atf-headless-runner:${{ VERSION }}
+          tags: |
+            ghcr.io/bmoers/sn/atf-headless-runner:latest
+            ghcr.io/bmoers/sn/atf-headless-runner:${{ VERSION }}
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.revision=${{ github.sha }}
