--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,15 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Release to NPM and GitHub
-        run: echo "::set-env name=VERSION::$(node -e "console.log(require('./package.json').version)")"
+      - name: Prep Tags
+        id: prep
+        run: |
+          VERSION=$(node -e "console.log(require('./package.json').version)")
+          TAGS="ghcr.io/bmoers/sn/atf-headless-runner:latest"
+          TAGS="$TAGS,ghcr.io/bmoers/sn/atf-headless-runner:sha-${GITHUB_SHA::8}"
+          TAGS="$TAGS,ghcr.io/bmoers/sn/atf-headless-runner:sha-${VERSION}"
+          echo ::set-output name=tags::${TAGS}
+          
 
       - name: Build Docker images & push to Github Packages
         uses: docker/build-push-action@v2
@@ -33,7 +40,7 @@ jobs:
         with:
           pull: false
           push: true
-          tags: ghcr.io/bmoers/sn/atf-headless-runner:latest,ghcr.io/bmoers/sn/atf-headless-runner:${VERSION}
+          tags: ${{ steps.prep.outputs.tags }}
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.revision=${{ github.sha }}
