--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "fs-extra": "^10.0.0",
-    "playwright": "^1.18.1"
+    "playwright": "^1.18.1",
+    "winston": "^3.6.0"
   }
 }
