--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,14 @@
     "env": {
         "browser": false,
         "node": true,
-        "commonjs": true
+        "commonjs": true,
+        "es6": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:node/recommended"
+        "eslint:recommended"
     ],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "2020"
     },
     "rules": {
         "no-unused-vars": "warn",
@@ -18,6 +18,20 @@
                 "avoidEscape": true
 
             }
+        ],
+
+        "indent": [
+            "error", 4
+        ],
+        "no-console": "warn",
+        
+        "linebreak-style": [
+            "warn",
+            "unix"
+        ],
+        "semi": [
+            "error",
+            "always"
         ]
     }
 }
