--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,13 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: "amd64,arm64"
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
         
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
