--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,10 @@ jobs:
           
 
       - name: Build Docker images & push to Github Packages
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         id: docker_build
         with:
+          platforms: linux/amd64,linux/arm64
           pull: false
           push: true
           tags: ${{ steps.prep.outputs.tags }}
